@startuml CasosDeUso
left to right direction
actor "Utilizador" as U
actor "Administrador" as A

rectangle "Sistema de Gestão de Finanças Pessoais" { 

    usecase "Registar Conta" as UC1
    usecase "Login" as UC2
    usecase "Gerir Perfil" as UC3
    usecase "Adicionar Receita/Despesa" as UC4
    usecase "Editar Receita/Despesa" as UC5
    usecase "Remover Receita/Despesa" as UC6
    usecase "Criar Categorias" as UC7
    usecase "Consultar Relatórios" as UC8
    usecase "Gerir Utilizadores" as UC9
}

U -- UC1
U -- UC2
U -- UC3
U -- UC4
U -- UC5
U -- UC6
U -- UC7
U -- UC8

A -- UC2
A -- UC9
@enduml

@startuml Classes
class Utilizador {
    -id : int
    -nome : string
    -password : string
    -perfil : string
    +registar()
    +login()
}

class Transacao {
    -id : int
    -descricao : string
    -valor : double
    -data : Date
    -tipo : string
    +validar()
}

class Categoria {
    -id : int
    -nome : string
}

class Relatorio {
    +calcularSaldo() : double
    +totalReceitas(periodo) : double
    +totalDespesas(periodo) : double
    +listarTransacoesPorCategoria(categoria)
}

Utilizador "1" -- "0..*" Transacao : cria >
Transacao "1" -- "1" Categoria : pertence >
Utilizador "1" -- "0..*" Categoria : define >
Utilizador "1" -- "0..*" Relatorio : consulta >
@enduml

@startuml Sequencia
actor U as "Utilizador"
boundary UI as "Interface Web"
control SC as "Sistema"
entity DB as "Base de Dados"

U -> UI : Inserir dados da Transação
UI -> SC : enviarTransacao(dados)
SC -> Transacao : validar()
Transacao -> Categoria : verificarCategoria()
SC -> DB : guardarTransacao()
DB --> SC : confirmação
SC --> UI : "Transação adicionada com sucesso"
UI --> U : Mensagem de sucesso
@enduml
